; ModuleID = '/home/carl/AnghaBench/ccv/lib/3rdparty/sqlite3/extr_sqlite3.c_unixCurrentTimeInt64.c'
source_filename = "/home/carl/AnghaBench/ccv/lib/3rdparty/sqlite3/extr_sqlite3.c_unixCurrentTimeInt64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i64 }

@unixCurrentTimeInt64.unixEpoch = internal constant i32 1045635584, align 4
@SQLITE_OK = common dso_local global i32 0, align 4
@CLOCK_REALTIME = common dso_local global i32 0, align 4
@sqlite3_current_time = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @unixCurrentTimeInt64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unixCurrentTimeInt64(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.timeval, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32, i32* @SQLITE_OK, align 4
  store i32 %7, i32* %5, align 4
  %8 = call i32 @gettimeofday(%struct.timeval* %6, i32 0)
  %9 = getelementptr inbounds %struct.timeval, %struct.timeval* %6, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = trunc i64 %10 to i32
  %12 = mul nsw i32 1000, %11
  %13 = add nsw i32 1045635584, %12
  %14 = getelementptr inbounds %struct.timeval, %struct.timeval* %6, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = sdiv i32 %15, 1000
  %17 = add nsw i32 %13, %16
  %18 = load i32*, i32** %4, align 8
  store i32 %17, i32* %18, align 4
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @UNUSED_PARAMETER(i32* %19)
  %21 = load i32, i32* %5, align 4
  ret i32 %21
}

declare dso_local i32 @gettimeofday(%struct.timeval*, i32) #1

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
